--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,8 +24,8 @@ a {
 }
 .cart:hover {
   background-color: white !important;
-  border: 1px solid #fe9126 !important;
-  transition: all ease-in 0.3s;
+  border: 2px solid #fe9126 !important;
+  transition: all ease-in 0.1s;
   .cart-icon {
     fill: #fe9126 !important;
   }
@@ -77,6 +77,41 @@ nav {
       }
     }
   }
+}
+.h1 {
+  position: relative;
+}
+.h1::after {
+  content: "";
+  position: absolute;
+  top: 130%;
+  left: 43%;
+  width: 150px;
+  height: 2px;
+  background-color: #3399cc;
+}
+button#fill-tab-example-tab-profile,
+button#fill-tab-example-tab-home {
+  margin: 0;
+  padding: 0;
+  height: 3.75rem;
+  font-weight: 500;
+  font-size: 1.125rem;
+  letter-spacing: 1.5px;
+  border-radius: 0;
+}
+.nav-link {
+  font-weight: 700 !important;
+  color: #3399cc !important;
+}
+.nav-link:hover,
+.nav-link.active {
+  color: white !important;
+  background-color: #fe9126 !important;
+}
+.footer-link:hover {
+  color: #fe9126 !important;
+  transition: 0.5s ease-in;
 }
 @media (max-width: 768px) {
   nav {
