--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -113,6 +113,34 @@ button#fill-tab-example-tab-home {
   color: #fe9126 !important;
   transition: 0.5s ease-in;
 }
+.parent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .loader {
+    margin: 50px;
+    border: 10px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 10px solid #fe9126;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    justify-content: center;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
+.sidebar-link:hover {
+  color: #3399cc !important;
+}
+
 @media (max-width: 768px) {
   nav {
     background-color: #fe9126;
