--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -141,6 +141,98 @@ button#fill-tab-example-tab-home {
   color: #3399cc !important;
 }
 
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="number"] button,
+textarea {
+  font-size: 16px;
+  padding: 0.25rem;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  border-radius: 0;
+  outline: none;
+}
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="number"]:focus button:focus,
+textarea:focus {
+  font-size: 16px;
+  padding: 0.25rem;
+  background-color: white;
+  color: black;
+  border-radius: 0;
+  outline: none;
+}
+
+label,
+button {
+  margin-top: 1rem;
+}
+
+button {
+  padding: 0.5rem;
+}
+
+.instructions {
+  font-size: 0.75rem;
+  border-radius: 0;
+  background: #000;
+  color: #fff;
+  padding: 0.25rem;
+  position: relative;
+  bottom: -10px;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  flex-grow: 1;
+  padding-bottom: 1rem;
+}
+section {
+  width: 100%;
+  max-width: 420px;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 1rem;
+  background-color: #f3f3f3;
+}
+.instructions > svg {
+  margin-right: 0.25rem;
+}
+
+.offscreen {
+  position: absolute;
+  left: -9999px;
+}
+
+.hide {
+  display: none;
+}
+
+.valid {
+  color: limegreen;
+  margin-left: 0.25rem;
+}
+
+.invalid {
+  color: red;
+  margin-left: 0.25rem;
+}
+
+.errmsg {
+  background-color: lightpink;
+  color: firebrick;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 @media (max-width: 768px) {
   nav {
     background-color: #fe9126;
@@ -187,7 +279,6 @@ button#fill-tab-example-tab-home {
     }
   }
 }
-
 
 @media (prefers-color-scheme: dark) {
   html {
